add: entry point to find enriched word list entries
